# abecs-rust

./: Cargo.toml  EXEMPLOS.md  QUICKSTART.md  README.md  STATUS_IMPLEMENTACAO.md  TYPED_COMMANDS.md  protocolo_abecs.md  protocolo_abecs_2_20.md  transcao_completa_com_scope.txt
examples/: 01_basico.rs  02_informacoes.rs  03_menu.rs  04_entrada_dados.rs  05_captura_pin.rs  06_comando_personalizado.rs  07_transacao_completa.rs  08_transacao_emv_completa.rs  09_teste_cartao_pin.rs  10_teste_pin_simples.rs  11_teste_gtk.rs  12_teste_bcd.rs  README.md
src/: command.rs  commands.rs  connection.rs  emv.rs  error.rs  lib.rs  main.rs  protocol.rs  response.rs  serialize.rs
